compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1665
expression: "\n        import one\n        import two as one\n        "
---
error: Duplicate import
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import one
  │         ^^^^^^^^^^ First imported here
3 │         import two as one
  │         ^^^^^^^^^^^^^^^^^ Reimported here

one has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

